# esp32rlcd_vendor_base

./: CMakeLists.txt  PROJECT.md  README.md  build_firmware.sh  crop_gif.py  direct_build.sh  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1
components/ExternLib/codec_board/: CMakeLists.txt  board_cfg_data.c  cfg_parse.c  codec_init.c
components/app_bsp/: CMakeLists.txt  font_cn_16.c  font_cn_24.c  lvgl_bsp.h
components/esp_codec_dev/: CMakeLists.txt
components/port_bsp/: CMakeLists.txt  audio_bsp.cpp  audio_bsp.h  bt_audio.cpp  bt_audio.h  button_bsp.c  button_bsp.h  codec_bsp.cpp  codec_bsp.h  joystick_bsp.c  joystick_bsp.h
components/user_app/: CMakeLists.txt  arithmetic.cpp  arithmetic.h  sd_audio_player.cpp  sd_audio_player.h  sd_setup.cpp  sd_setup.h  sketch_player.cpp  sketch_player.h  sm2_scheduler.cpp  sm2_scheduler.h  snake_game.cpp  snake_game.h  socrates_content.cpp  socrates_content.h  socrates_ui.cpp  socrates_ui.h  tts_player.cpp  tts_player.h  ui_manager.cpp  ui_manager.h  user_app.cpp  vocab_loader.cpp  vocab_loader.h  word_data.h
converted_images/: cat_400x300_threshold.sketch  full_000.sketch
main/: CMakeLists.txt  idf_component.yml  main.cpp  phrase_data.h  user_config.h  ying_image.h
tools/: generate_caduceus_gif.py
